fix vertical alignment of Tile Links to center on IE

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1506,6 +1506,7 @@ a.oese-logo-home {
     display: flex;
     align-items: center;
     justify-content: center;
+    height:100%;
 }
 .office-grid-list-details p, .payments-details-list p{
     font-family: 'Merriweather', sans-serif !important;
